Reorganize component folder structure and apply various fixes

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,30 +1,35 @@
 {
-  "greetings_morning": "Good morning!",
+  "album": "Album",
+  "artists": "Artists",
+  "browse_all": "Browse all",
+  "by": "by",
+  "collapse_lib": "Collapse Your Library",
+  "compact": "Compact",
+  "downloaded": "Downloaded",
+  "duration": "Duration",
+  "github": "My GitHub page",
   "greetings_afternoon": "Good afternoon!",
   "greetings_evening": "Good evening!",
+  "greetings_morning": "Good morning!",
   "home": "Home",
-  "search": "Search",
-  "library": "Your library",
-  "github": "My GitHub page",
-  "title": "Title",
-  "artists": "Artists",
-  "album": "Album",
-  "whats_new": "What's new",
-  "whats_new_header": "The latest releases from artists, podcasts, and shows you follow.",
-  "whats_new_no_news_title": "We don't have any updates for you yet",
-  "whats_new_no_news_body": "When there's news, we'll post it here. Follow your favorite artists and podcasts to stay updated on them too.",
-  "no_results_for": "No results found for ",
-  "no_results_for_advise": "Make sure the words are spelled correctly or try fewer or different keywords.",
-  "browse_all": "Browse all",
-  "playlist": "Playlist",
-  "songs": "songs",
-  "view_as": "View as",
-  "list": "List",
-  "compact": "Compact",
-  "duration": "Duration",
-  "settings": "Settings",
-  "language": "Language",
   "language_description": "Choose language - Changes will be applied after restarting the app",
+  "language": "Language",
+  "library": "Your library",
+  "list": "List",
+  "lists": "Lists",
+  "mute": "Mute",
+  "no_results_for_advise": "Make sure the words are spelled correctly or try fewer or different keywords.",
+  "no_results_for": "No results found for ",
+  "playlist": "Playlist",
+  "return": "Return",
   "search_placeholder": "What do you want to play?",
-  "return": "Return"
+  "search": "Search",
+  "settings": "Settings",
+  "songs": "songs",
+  "title": "Title",
+  "view_as": "View as",
+  "whats_new_header": "The latest releases from artists, podcasts, and shows you follow.",
+  "whats_new_no_news_body": "When there's news, we'll post it here. Follow your favorite artists and podcasts to stay updated on them too.",
+  "whats_new_no_news_title": "We don't have any updates for you yet",
+  "whats_new": "What's new"
 }
