--- a/locales/es.json
+++ b/locales/es.json
@@ -1,30 +1,35 @@
 {
-  "greetings_morning": "¡Buenos días!",
+  "album": "Álbum",
+  "artists": "Artistas",
+  "browse_all": "Explorar todo",
+  "by": "de",
+  "collapse_lib": "Contraer Tu Biblioteca",
+  "compact": "Compacto",
+  "downloaded": "Descargado",
+  "duration": "Duración",
+  "github": "Mi página de Github",
   "greetings_afternoon": "¡Buenas tardes!",
   "greetings_evening": "¡Buenas Noches!",
+  "greetings_morning": "¡Buenos días!",
   "home": "Inicio",
-  "search": "Buscar",
-  "library": "Tu biblioteca",
-  "github": "Mi página de Github",
-  "title": "Título",
-  "artists": "Artistas",
-  "album": "Álbum",
-  "whats_new": "Novedades",
-  "whats_new_header": "Las últimas novedades de artistas, pódcasts y programas que sigues.",
-  "whats_new_no_news_title": "Todavía no tenemos ninguna novedad para ti",
-  "whats_new_no_news_body": "Si hay alguna novedad, la verás aquí. Sigue a tus artistas y pódcasts favoritos para no perderte ninguna novedad.",
-  "no_results_for": "No se ha encontrado ningún resultado para ",
-  "no_results_for_advise": "Asegurate que las palabras estén escritas correctamente o prueba con menos palabras clave o con otras distintas",
-  "browse_all": "Explorar todo",
-  "playlist": "Lista",
-  "songs": "canciones",
-  "view_as": "Ver como",
-  "list": "Lista",
-  "compact": "Compacto",
-  "duration": "Duración",
-  "settings": "Configuración",
-  "language": "Idioma",
   "language_description": "Elige tu idioma; los cambios se aplicarán tras reiniciar la aplicación",
+  "language": "Idioma",
+  "library": "Tu biblioteca",
+  "list": "Lista",
+  "lists": "Listas",
+  "mute": "Silenciar",
+  "no_results_for_advise": "Asegurate que las palabras estén escritas correctamente o prueba con menos palabras clave o con otras distintas",
+  "no_results_for": "No se ha encontrado ningún resultado para ",
+  "playlist": "Lista",
+  "return": "Volver",
   "search_placeholder": "¿Qué quieres reproducir?",
-  "return": "Volver"
+  "search": "Buscar",
+  "settings": "Configuración",
+  "songs": "canciones",
+  "title": "Título",
+  "view_as": "Ver como",
+  "whats_new_header": "Las últimas novedades de artistas, pódcasts y programas que sigues.",
+  "whats_new_no_news_body": "Si hay alguna novedad, la verás aquí. Sigue a tus artistas y pódcasts favoritos para no perderte ninguna novedad.",
+  "whats_new_no_news_title": "Todavía no tenemos ninguna novedad para ti",
+  "whats_new": "Novedades"
 }
