Refactor localization handling and update language options in settings

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -1,11 +1,11 @@
 {
   "album": "Album",
+  "albums": "Albums",
   "artists": "Artists",
   "browse_all": "Browse all",
   "by": "by",
   "collapse_lib": "Collapse Your Library",
   "compact": "Compact",
-  "downloaded": "Downloaded",
   "duration": "Duration",
   "github": "My GitHub page",
   "greetings_afternoon": "Good afternoon!",
