--- a/i18n/locales/es.json
+++ b/i18n/locales/es.json
@@ -1,11 +1,11 @@
 {
   "album": "Álbum",
+  "albums": "Álbumes",
   "artists": "Artistas",
   "browse_all": "Explorar todo",
   "by": "de",
   "collapse_lib": "Contraer Tu Biblioteca",
   "compact": "Compacto",
-  "downloaded": "Descargado",
   "duration": "Duración",
   "github": "Mi página de Github",
   "greetings_afternoon": "¡Buenas tardes!",
